# Root-image-analysis-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/demo/metadata/: raw_metadata.csv
docs/: CLEANING_RULES.md  DATA_CONTRACT.md  MAINTENANCE.md  MEASUREMENTS.md  PROJECT_PLAN.md  TRANSPARENCY_PRINCIPLES.md
src/: streamlit_app.py
src/data_cleaning/: __init__.py  audit.py  column_mapping.py  config.py  exporters.py  harmonization.py  image_validation.py  load_metadata.py  main.py  manifest.py  pipeline.py  validation.py
src/image_analysis/: config.py  csv_exporter.py  image_exporter.py  image_loader.py  load_manifest.py  main.py  morphology.py  pipeline.py  preprocessing.py  segmentation.py  skeleton_features.py  skeletonization.py
src/shared/: logging_utils.py  paths.py  schemas.py  statuses.py  types.py
tests/: test_data_cleaning.py  test_image_analysis.py
